--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Elizabeth Brown UX Researcher and Consultant</title>
+    <title>Liz Brown UX Researcher and Consultant</title>
     <link rel="images" href="images">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
@@ -42,203 +42,38 @@
         <div class="row mt-5 pl-3 pr-3 offset-1">
           <div class="col-11 about-container">
             <h1>Hi, I'm Liz.</h1>
-            <p class="about-p mt-3 mb-5">
-              A mixed-methods UX Researcher with two years of combined experience from industry, university, and freelancing. I have a background in experimental psych research, retail management, and a few other things.
+            <p class="about-p mt-3 mb-4">
+              A UX Researcher and Human-Centered Designer with a background in consulting and experimental psychology.
             </p>
-            <p class="offset-8">Thanks for stopping by.
+            <!-- hero image -->
+            <img class="about-img"src="images\image.JPG" alt="">
+            <p class="offset-10">photo credit
             </p>
           </div>
-
         </div>
         <!-- HERO END -->
-        <!-- EXP -->
-        <div class="row mt-5 pl-3 pr-3 offset-1">
-          <div class="col-11 mb-3">
-            <h2>Experience</h2>
-          </div>
-          <!-- Today col -->
-          <div class="col-3">
-            <p>Today</p>
-          </div>
-          <div class="col 8">
-            <p>UX Researcher</p>
-            <p>Open to new research opportunities</p>
-          </div>
-          <div class="w-100">
-          </div>
-          <!-- 2019-2020 col -->
-          <div class="col-3">
-            <p>2019 - 2020</p>
-          </div>
-          <div class="col 8">
-            <p>UX Researcher & Consultant</p>
-            <p>Open to new research opportunities</p>
-          </div>
-          <div class="w-100">
-          </div>
-          <!-- 2019 col -->
-          <div class="col-3">
-            <p>2019</p>
-          </div>
-          <div class="col 8">
-            <p>UX Researcher Intern</p>
-            <p>Open to new research opportunities</p>
-          </div>
-          <div class="w-100">
-          </div>
-          <!-- 2nd 2019-2020 col -->
-          <div class="col-3">
-            <p>2019 - 2020</p>
-          </div>
-          <div class="col 8">
-            <p>Program Facilitator</p>
-            <p>Open to new research opportunities</p>
-          </div>
-          <div class="w-100">
-          </div>
-          <!-- 2018-2020 col -->
-          <div class="col-3">
-            <p>2018 - 2020</p>
-          </div>
-          <div class="col 8">
-            <p>Graduate Student</p>
-            <p>Open to new research opportunities</p>
-          </div>
-          <div class="w-100">
-          </div>
-          <!-- Back in the Day col -->
-          <div class="col-3">
-            <p>Back in the Day</p>
-          </div>
-          <div class="col 8">
-            <p>UX Researcher</p>
-            <p>Open to new research opportunities</p>
-          </div>
-        </div>
-        <!-- EXP END -->
-        <!-- WORK -->
-        <div class="row mt-5 pl-3 pr-3 offset-1" id="work">
-          <div class="col-11 mb-3">
-            <h2>Work</h2>
-          </div>
-          <!-- Monotype column -->
-          <div class="col-5 mt-1">
-            <!-- monotype card -->
-            <div class="card">
-              <div class="card-body">
-                <h3 class="card-title">MONOTYPE</h3>
-                <p class="card-text">Applying service design to understand how user and employee problems intersect</p>
-                <a href="monotype.html" class="btn" tabindex="0">Font more?</a>
-              </div>
-              <div class="card-footer mt-2">
-                <span class="badge badge-pill badge-light">Service Design</span>
-                <span class="badge badge-pill badge-light">UX Research</span>
-                <span class="badge badge-pill badge-light">SaaS</span>
-                <span class="badge badge-pill badge-light">3 Months</span>
-                <span class="badge badge-pill badge-light">User Interviews</span>
-                <span class="badge badge-pill badge-light">Service Mapping</span>
-                <span class="badge badge-pill badge-light">Customer Journeys</span>
-              </div>
-            </div>
-          </div>
-          <!-- Makeaton column -->
-          <div class="col-5 mt-1">
-            <!-- makeathon card -->
-            <div class="card">
-              <div class="card-body">
-                <h3 class="card-title">MAKE-A-THON</h3>
-                <p class="card-text">Competing against 50 teams to pitch and win a 36-hour product design competition</p>
-                <a href="#" class="btn">How we won</a>
-              </div>
-              <div class="card-footer mt-2">
-                <span class="badge badge-pill badge-light">UX Research</span>
-                <span class="badge badge-pill badge-light">Pitching</span>
-                <span class="badge badge-pill badge-light">Digital Mock-up</span>
-                <span class="badge badge-pill badge-light">36 Hours</span>
-                <span class="badge badge-pill badge-light">User Interviews</span>
-
-              </div>
-            </div>
-          </div>
-          <!-- Babybracket column -->
-          <div class="col-5 mt-5">
-            <!-- babybracket card -->
-            <div class="card">
-              <div class="card-body">
-                <h3 class="card-title">BABY BRACKET</h3>
-                <p class="card-text">Conducting discovery research and user testing for a social baby naming app</p>
-                <a href="baby-bracket.html" class="btn">Meet our baby</a>
-              </div>
-              <div class="card-footer mt-2">
-                <span class="badge badge-pill badge-light">UX Research</span>
-                <span class="badge badge-pill badge-light">UX Design</span>
-                <span class="badge badge-pill badge-light">iOS MVP</span>
-                <span class="badge badge-pill badge-light">4 Months</span>
-                <span class="badge badge-pill badge-light">User Interviews</span>
-                <span class="badge badge-pill badge-light">Customer Journeys</span>
-                <span class="badge badge-pill badge-light">Surveys</span>
-              </div>
-            </div>
-          </div>
-          <!-- CUTGroup column -->
-          <div class="col-5 mt-5">
-            <!-- cutgroup card -->
-            <div class="card">
-              <div class="card-body">
-                <h3 class="card-title">CUTGroup</h3>
-                <p class="card-text">A rapid user testing program</p>
-                <a href="cutgroup.html" class="btn">Cut to chase</a>
-              </div>
-              <div class="card-footer mt-2">
-                <span class="badge badge-pill badge-light">UX Research</span>
-                <span class="badge badge-pill badge-light">User testing</span>
-                <span class="badge badge-pill badge-light">Mobile Apps</span>
-                <span class="badge badge-pill badge-light">Voice Apps</span>
-                <span class="badge badge-pill badge-light">Websites</span>
-                <span class="badge badge-pill badge-light">Civic Program</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- WORK END -->
         <!-- ABOUT -->
-        <div class="row mt-5 pt-5 pl-3 pr-3 offset-1" id="about">
+        <div class="row mt-4 mb-5 pl-3 pr-3 offset-1">
           <div class="col-11 about-container">
-            <!-- hero image -->
-            <h1>About</h1>
-            <img class="about-img"src="images\image.JPG" alt="">
-            <p class="about-p mt-3 mb-4">
-              I believe in ego-less research. I don't think I'm any smarter than anyone else. My goal when researching is to discover the truth, not confirm it. I believe in equality between people. Logic before emotions and emotions before logic. <br><br>
-              I don't mind messiness or imperfection. As Angela Davis once said, when speaking about the world's complexity,  <a href="https://www.youtube.com/watch?v=S0jf8D5WHoo&feature=youtu.be&t=2490" target="_blank" target="_blank">"The social world always exceeds our ability to fully comprehend it."</a>
+            <!-- Header -->
+            <h2>I take life, as seriously, as it takes me </h2>
+            <!-- content -->
+            <p class="about-p mt-4 mb-4">
+              Here, on a four billion year-old planet, hurrling through the unknown unknown, I take each day as it comes. Doing what I love, discovering experiences and untangling meaning and embracing the things I learning to love, like messiness and imperfection.
               <br><br>
-              A few years ago, I traded in perfect-ion-ism for perfect-enough-ism. By no longer striving for perfection, I find peace in my work, accomplish more, and stress less.
-              <br><br>
-              I enjoy working with people who like sharing ideas and opinions. I don't believe in things designed by one person. If you didn't get help, you didn't design.
-              <br><br>
+
               Being a UX researcher doesn't define me, but it does inspire me. Everyday I try to get a little better, a littler wiser, a little more empathic, and a little more grateful.
               <br><br>
-              When you're ready to connect, send something my way at <a href="mailto:liz.alma.brown@gmail.com?subject=*Waving emoji hand* Hi Liz!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a>.
+              At any moment, you might find me playing strategy games, advocating for the term 'enslaved people' over the term 'slaves,' reading wiki articles, writing one screenplay over and over again, listening to Little Dragon, or playing tennis.
+              <br><br>
+              Send work requests, intersting tidbits, other things my way at <a href="mailto:liz.alma.brown@gmail.com?subject=*Waving emoji hand* Hi Liz!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a>.
+            </p>
+            <p class="offset-9">Thanks for stopping by.
             </p>
           </div>
 
         </div>
         <!-- ABOUT END -->
-        <!-- tl;dr -->
-        <div class="row mt-5 pl-3 pr-3 offset-1">
-          <div class="col-11 about-container">
-            <!-- hero image -->
-            <h2>tl;dr</h2>
-            <p class="about-p mt-3 mb-5">
-              Thinker, Collaborator, People Nerd.
-              <br><br>
-              Born and raised in Richmond, Virginia by two parents and one sister.
-              <br><br>
-              At any moment, you might find me playing strategy games, advocating for the term 'enslaved people' over the term 'slaves,' reading psych today articles, writing one screenplay over and over again, listening to Amy Winehouse, or playing tennis.
-            </p>
-          </div>
-
-        </div>
-        <!-- tl;dr END -->
         <!-- CONTAINER END -->
       </div>
     </main>
